# mprpc

./: CMakeLists.txt  README.md
example/: friend.pb.h  friend.proto  user.pb.cc
example/caller/: callfriendservice.cpp
lib/mprpc/: autobuild.sh  test.cpp
lib/mprpc/c++/: test.cpp
lib/mprpc/example/: friend.pb.cc  user.pb.h  user.proto
lib/mprpc/example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
lib/mprpc/example/caller/: CMakeLists.txt  calluserservice.cpp
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.pb.cc  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
